[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/theme/airbroomball_theme.tres" type="Theme" id=1]
[ext_resource path="res://src/ui/pause/Pause.gd" type="Script" id=2]
[ext_resource path="res://assets/pause.png" type="Texture" id=4]

[node name="Pause" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="VBoxContainer" parent="."]
pause_mode = 2
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -330.0
margin_top = -85.0
margin_right = 330.0
margin_bottom = 85.0
theme = ExtResource( 1 )
custom_constants/separation = 26

[node name="Resume" type="Button" parent="Buttons"]
margin_right = 660.0
margin_bottom = 72.0
text = "RESUME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="Button" parent="Buttons"]
margin_top = 98.0
margin_right = 660.0
margin_bottom = 170.0
text = "MENU"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseButton" type="TextureButton" parent="."]
self_modulate = Color( 1, 1, 1, 0.470588 )
anchor_left = 0.823
anchor_top = 0.052
anchor_right = 0.921
anchor_bottom = 0.107
margin_left = -0.0809937
margin_top = -0.515297
margin_right = -6.64105
margin_bottom = -6.91501
rect_scale = Vector2( 1.10547, 1.10547 )
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Buttons/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="Buttons/Menu" to="." method="_on_Menu_pressed"]
[connection signal="pressed" from="PauseButton" to="." method="_on_PauseButton_pressed"]
